[gd_scene load_steps=13 format=3 uid="uid://rnjj4su20fdu"]

[ext_resource type="Script" path="res://scenes/main/mainMenu.gd" id="1_bly3b"]
[ext_resource type="Texture2D" uid="uid://dqdmjbdrudtwa" path="res://GameAssets/Textures/EarthGotREKD2.png" id="2_1bl6g"]
[ext_resource type="Texture2D" uid="uid://bnhrhaj86utp3" path="res://GameAssets/Textures/EarthGotREKD.png" id="2_43jns"]
[ext_resource type="Texture2D" uid="uid://cn8g0puqowr0b" path="res://GameAssets/Textures/EarthGotREKD3.png" id="3_i3i1o"]

[sub_resource type="Animation" id="Animation_tf24f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jvbts"]
resource_name = "fade1"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ho4ta"]
resource_name = "fade2"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_3rsik"]
resource_name = "fade3"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fpfed"]
_data = {
"RESET": SubResource("Animation_tf24f"),
"fade1": SubResource("Animation_jvbts"),
"fade2": SubResource("Animation_ho4ta"),
"fade3": SubResource("Animation_3rsik")
}

[sub_resource type="LabelSettings" id="LabelSettings_kcgfi"]
font_size = 35

[sub_resource type="Animation" id="Animation_jleew"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nfvvj"]
_data = {
"fade": SubResource("Animation_jleew")
}

[node name="mainMenu" type="Node2D"]
script = ExtResource("1_bly3b")

[node name="Back3" type="Sprite2D" parent="."]
position = Vector2(800, 448)
texture = ExtResource("2_1bl6g")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Back3"]
libraries = {
"": SubResource("AnimationLibrary_fpfed")
}

[node name="Back2" type="Sprite2D" parent="."]
position = Vector2(800, 448)
texture = ExtResource("3_i3i1o")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Back2"]
libraries = {
"": SubResource("AnimationLibrary_fpfed")
}

[node name="Back1" type="Sprite2D" parent="."]
position = Vector2(800, 448)
texture = ExtResource("2_43jns")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Back1"]
libraries = {
"": SubResource("AnimationLibrary_fpfed")
}

[node name="gui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="playButton" type="Button" parent="gui"]
layout_mode = 0
offset_left = 192.0
offset_top = 608.0
offset_right = 384.0
offset_bottom = 672.0
text = "Start Game"

[node name="quitButton" type="Button" parent="gui"]
layout_mode = 0
offset_left = 1216.0
offset_top = 608.0
offset_right = 1408.0
offset_bottom = 672.0
text = "Exit Game"

[node name="title" type="Label" parent="gui"]
z_index = 1
layout_mode = 0
offset_left = 640.0
offset_top = 192.0
offset_right = 960.0
offset_bottom = 256.0
text = "Martian Soliloquy"
label_settings = SubResource("LabelSettings_kcgfi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="titlebg" type="ColorRect" parent="gui"]
layout_mode = 0
offset_left = 512.0
offset_top = 192.0
offset_right = 1088.0
offset_bottom = 320.0
color = Color(0, 0, 0, 0.392157)

[node name="settings" type="Control" parent="gui"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="volumeLabel" type="Label" parent="gui/settings"]
z_index = 2
layout_mode = 0
offset_left = 741.0
offset_top = 584.0
offset_right = 854.0
offset_bottom = 616.0
text = "Volume : 100%"
vertical_alignment = 1

[node name="volumeBG" type="ColorRect" parent="gui/settings"]
layout_mode = 0
offset_left = 624.0
offset_top = 576.0
offset_right = 976.0
offset_bottom = 664.0
color = Color(0, 0, 0, 0.490196)

[node name="fullscreenToggle" type="Button" parent="gui/settings"]
z_index = 1
layout_mode = 0
offset_left = 704.0
offset_top = 736.0
offset_right = 896.0
offset_bottom = 800.0
text = "Toggle Fullscreen"

[node name="HSlider" type="HSlider" parent="gui/settings"]
layout_mode = 0
offset_left = 637.0
offset_top = 624.0
offset_right = 957.0
offset_bottom = 656.0
value = 75.0
tick_count = 5
ticks_on_borders = true

[node name="Label" type="Label" parent="gui"]
layout_mode = 0
offset_left = 544.0
offset_top = 256.0
offset_right = 1056.0
offset_bottom = 320.0
text = "A game by
Kaden Sedmak-Locke, Jorge Gonzalez, Ellen Brannon, Chloe Liang"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="gui"]
visible = false
modulate = Color(0, 0, 0, 1)
z_index = 10
layout_mode = 0
offset_right = 1600.0
offset_bottom = 896.0
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="gui/ColorRect"]
libraries = {
"": SubResource("AnimationLibrary_nfvvj")
}

[connection signal="pressed" from="gui/playButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="gui/quitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="gui/settings/fullscreenToggle" to="." method="_on_fullscreen_toggle_pressed"]
[connection signal="value_changed" from="gui/settings/HSlider" to="." method="_on_h_slider_value_changed"]
